<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <EditText
        android:id="@+id/ed_ins_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/instruction"/>
    <EditText
        android:id="@+id/ed_ins_2"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/instruction"/>
    <EditText
        android:id="@+id/ed_ins_3"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/instruction"/>
    <EditText
        android:id="@+id/ed_ins_4"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/instruction"/>
     <EditText
         android:id="@+id/ed_ins_5"

         android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/instruction"/>
    <EditText
        android:id="@+id/ed_ins_6"
        android:hint="@string/instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/macro_defination"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/macro_defination"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/macro_expansion"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:id="@+id/expansion"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mdt"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/MDT"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textAppearance="@android:style/TextAppearance.Large"

            android:text="APT"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/APT_table"
            android:orientation="vertical"
           >

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textAppearance="@android:style/TextAppearance.Large"

            android:text="Updated Code"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Updated_Code"
            android:orientation="vertical"
            >

        </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:textAllCaps="true"
        android:onClick="Generate"/>
    </LinearLayout>
</ScrollView>